# svt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/docs/: 2025-12-25-initial-plan.md  2025-12-26-image-display-bug.md  2025-12-27-performance-optimization.md  20251226-image-display-bug.md
.github/workflows/: release.yml
docs/: architecture.md
src/: app.rs  config.rs  fit.rs  kgp.rs  main.rs  prefetch.rs  sender.rs  worker.rs
