[package]
name = "svt"
version = "25.12.6"
edition = "2024"
description = "Simple Viewer in Terminal - sxiv-like terminal image viewer"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
ratatui-image = "8.1"
image = "0.25"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
base64-simd = "0.8"
flate2 = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
arboard = "3"
rayon = "1.10"
